Run JDK 21 tests

--- a/Dockerfile.beta
+++ b/Dockerfile.beta
@@ -12,6 +12,7 @@ ENV FILEBOT_URL="https://get.filebot.net/filebot/BETA/FileBot_${FILEBOT_VERSION}
 
 
 RUN set -eux \
+ && rm /etc/apt/sources.list.d/xpra.sources \
  && apt-get update \
  && DEBIAN_FRONTEND=noninteractive apt-get remove -y openjdk-17-jre openjdk-17-jre-headless \
  && DEBIAN_FRONTEND=noninteractive apt-get install -y openjdk-21-jre \
