--- a/Dockerfile.xpra
+++ b/Dockerfile.xpra
@@ -3,13 +3,16 @@ FROM rednoah/filebot
 LABEL maintainer="Reinhard Pointner <rednoah@filebot.net>"
 
 
+ENV XPRA_UBUNTU_RELEASE="plucky"
+
+
 RUN set -eux \
  && apt-get update \
  && DEBIAN_FRONTEND=noninteractive apt-get install -y apt-transport-https software-properties-common \
  && DEBIAN_FRONTEND=noninteractive apt-get install -y ca-certificates \
  && add-apt-repository universe \
  && curl -o /usr/share/keyrings/xpra.asc https://xpra.org/xpra.asc \
- && curl -o /etc/apt/sources.list.d/xpra.sources https://raw.githubusercontent.com/Xpra-org/xpra/master/packaging/repos/oracular/xpra-lts.sources \
+ && curl -o /etc/apt/sources.list.d/xpra.sources https://raw.githubusercontent.com/Xpra-org/xpra/master/packaging/repos/$XPRA_UBUNTU_RELEASE/xpra.sources \
  && apt-get update \
  && DEBIAN_FRONTEND=noninteractive apt-get install -y xpra openjdk-17-jre zenity xdg-utils nautilus gedit trash-cli \
  ## ** fix xdg-open behaviour
