--- a/Dockerfile.xpra
+++ b/Dockerfile.xpra
@@ -14,12 +14,7 @@ RUN set -eux \
  && curl -o /usr/share/keyrings/xpra.asc https://xpra.org/xpra.asc \
  && curl -o /etc/apt/sources.list.d/xpra.sources https://raw.githubusercontent.com/Xpra-org/xpra/master/packaging/repos/$XPRA_UBUNTU_RELEASE/xpra.sources \
  && apt-get update \
- && DEBIAN_FRONTEND=noninteractive apt-get install -y xpra openjdk-17-jre zenity xdg-utils trash-cli desktop-file-utils nautilus gedit gnome-terminal ubuntu-wallpapers-plucky- \
- ## ** fix xdg-open behaviour
- && rm -rvf /usr/share/applications/*filebot* \
- && rm -rvf /usr/share/file-manager/actions/*filebot* \
- && rm -rvf /usr/share/kio/servicemenus/*filebot* \
- && update-desktop-database \
+ && DEBIAN_FRONTEND=noninteractive apt-get install -y xpra openjdk-17-jre zenity xdg-utils trash-cli desktop-file-utils nautilus gedit gnome-terminal gnome-backgrounds- ubuntu-wallpapers-plucky- cinnamon-l10n- humanity-icon-theme- nemo- \
  ## ** silence xpra startup error messages
  && mkdir -m 777 -p /tmp/xdg/xpra \
  && rm -rvf /usr/share/xpra/www/default-settings.* \
@@ -29,7 +24,14 @@ RUN set -eux \
  && chmod 775 /run/xpra \
  && mkdir -m 777 -p /etc/xdg/menus \
  && echo "<Menu/>" > /etc/xdg/menus/kde-debian-menu.menu \
- && echo "<Menu/>" > /etc/xdg/menus/debian-menu.menu
+ && echo "<Menu/>" > /etc/xdg/menus/debian-menu.menu \
+ ## ** fix xdg-open behaviour
+ && rm -rvf /usr/share/applications/*filebot* \
+ && rm -rvf /usr/share/file-manager/actions/*filebot* \
+ && rm -rvf /usr/share/kio/servicemenus/*filebot* \
+ && update-desktop-database \
+ ## ** print installed packages index
+ && dpkg-query -W -f='${Installed-Size} ${Package}\n' | sort -n
 
 
 # install custom launcher scripts
